fix to pre alignment

--- a/frontend/src/components/event/events.scss
+++ b/frontend/src/components/event/events.scss
@@ -134,7 +134,9 @@ button:hover:active{
 }
 
 .content {
-	overflow-wrap: break-word; 
+	overflow-x: auto;
+	white-space: break-spaces;
+	word-wrap: break-word; 
 	padding: 20px;
 	border-radius: 5px;
   display: none;
